<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    tools:context=".ui.taskDescriptionActivity.TaskDescriptionActivity">

    <Button
        android:id="@+id/exit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_back"
        android:textColor="@color/font" />

    <Button
        android:id="@+id/deleteTask"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_delete"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/taskDescription"
        android:layout_alignTop="@id/taskDescription"
        android:layout_marginLeft="-28dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_description"
        android:layout_alignStart="@id/taskDescription"
        android:layout_marginStart="-28dp" />

    <EditText
        android:id="@+id/taskField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:gravity="left"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskField"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/addDescription"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginStart="30dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/addSubTasks"
        app:srcCompat="@drawable/ic_subtask" />

    <Button
        android:id="@+id/addSubTask"
        android:layout_width="207dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@id/taskDescription"
        android:layout_alignTop="@id/taskDescription"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:text="@string/addSubTasks"
        android:textSize="12sp"
        android:layout_alignStart="@id/taskDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subTask"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskDescription"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_marginStart="30dp">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>