...
                android:text="@string/tasks"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="537dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/white">

        </androidx.recyclerview.widget.RecyclerView>

    </FrameLayout>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/round_button"
        android:text="@string/plus"
        android:textColor="@color/colorAccent"
...
