<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#A3A3A3"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/newTaskTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/newTask"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/taskDescription"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addDescription"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_description" />

        <Button
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:background="#00FFFFFF"
            android:text="@string/save"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

</LinearLayout>