<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/sub_task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false" />

    <Button
        android:id="@+id/delete_subtask"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:background="@drawable/ic_delete_subtask" />
</RelativeLayout>